# StarSeeker

./: .gitignore  README.md  package-lock.json  package.json  server.js
.github/workflows/: ci.yml
.vercel/: project.json
backend/: build.gradle.kts  settings.gradle.kts
backend/src/main/kotlin/com/starseeker/: Application.kt
backend/src/main/kotlin/com/starseeker/api/: AuthController.kt  QuestionController.kt
backend/src/main/kotlin/com/starseeker/config/: SecurityConfig.kt
backend/src/main/kotlin/com/starseeker/exception/: GlobalExceptionHandler.kt
backend/src/main/kotlin/com/starseeker/model/: Models.kt
backend/src/main/kotlin/com/starseeker/repo/: QuestionRepository.kt
backend/src/main/kotlin/com/starseeker/security/: JwtAuthFilter.kt  JwtService.kt
backend/src/main/kotlin/com/starseeker/service/: AnalysisService.kt  OcrService.kt  QuestionService.kt
backend/src/main/resources/: application.yml
docs/: architecture.drawio  architecture.md
py_backend/: .coverage  Dockerfile  pyproject.toml
py_backend/app/: main.py
py_backend/app/routers/: api.py
py_backend/app/services/: analysis_service.py
py_backend/k8s/: deployment.yaml
py_backend/tests/: test_api.py
src/analysis/: analysis.js
src/db/: index.js
src/ocr/: ocr.js  parser.js
static/: app.js  index.html  style.css
tests/: perf.js
