[tool.poetry]
name = "starseeker-py-backend"
version = "0.1.0"
description = "摘星搜题 Python 后端：FastAPI + LangChain"
authors = ["StarSeeker Team <dev@starseeker.local>"]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.115.5"
uvicorn = {version = "^0.30.6", extras = ["standard"]}
pydantic = "^2.9.0"
langchain = "^0.2.16"
langchain-community = "^0.2.14"
httpx = "^0.27.2"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"

